[package]
name = "slorpit"
version = "0.1.0"
edition = "2024"
authors = ["Claude <noreply@anthropic.com>"]
description = "Using PDF as an archive format (slorp to compress, unslorp to decompress)"
license = "CC0-1.0"
repository = "https://github.com/bbqsrc/slorpit"
keywords = ["pdf", "archive", "compression", "cursed"]
categories = ["command-line-utilities", "compression"]

[[bin]]
name = "slorp"
path = "src/bin/slorp.rs"

[[bin]]
name = "unslorp"
path = "src/bin/unslorp.rs"

[dependencies]
lopdf = "0.38"
flate2 = "1.0"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
filetime = "0.2"
chrono = "0.4"
